# Masterthesis

./: .gitignore
Notizen/.obsidian/: community-plugins.json  workspace.json
Notizen/.obsidian/plugins/obsidian-completr/: blacklisted_suggestions.txt  scanned_words.txt
Notizen/.obsidian/plugins/pdf-plus/: data.json
Notizen/Ideen/: 2-approximation through grids.md  Datenübersicht.md  Triangulierung.md  Worst Case.md
Notizen/Ideen/Length Filtered Spanner/: Fast Closet pair Approximation.md  Greedy Construction.md  Notes.md  WSPD Construction.md
Notizen/Ideen/MISC/: 3-approximation through grids.md  Improved Spanners.md  Top Down Path Split.md
Notizen/Ideen/Probability on Theta Spanner/: Probability on theta spanner on empty Visgraphs.md
Notizen/Ideen/Spanner for Visibility Graphs/: (old) Beispiel für n**2 Spanner in Visibility Graphs.md  Construction using Longest Edge Separation.md  Construction with SPL Metric.md  Problem Statement.md  S=G Spanner in P-Constructed Visibility Graphs.md  S=G Spanner in Visibility Graphs.md  n 2 Proof v2.md
Notizen/Ink/Drawing/: 2025.5.3 - 13.06pm.drawing
Notizen/Ink/Writing/: 2025.5.3 - 13.09pm.writing  2025.5.3 - 13.10pm.writing
Notizen/Related Work/: Energy-Efficient Paths in Radio Networks.md  Route Planning in Elite Dangerous.md
Notizen/Struktur/: Begriffe.md  Problemdefinition.md  Spanner.md
Notizen/media/: Energy-Efficient Paths in Radio Networks.md
Notizen/zzz_OTHER/: Theo Memory.md
code/: CMakeLists.txt  theta_test.sh
code/src/: DataLoader.cpp  DataWriter.cpp  DataWriter.h  Dataloader.cpp  Dataloader.hpp  Graph.cpp  Graph.hpp  HubLabels.cpp  HubLabels.hpp  MultiThetaAnalysis.cpp  MultiThetaAnalysis.h  Octtree.cpp  PathBucketTest.cpp  Progressbar.h  Quadtree.cpp  Quadtree.hpp  ThetaSpanner.cpp  ThetaSpanner.hpp  ThetaSpannerAnalyser.cpp  WSPD.cpp  main.cpp  search.cpp
code/src/analysis/: BinaryOptimizer.cpp  CoastlineAllEdgesanalysis.cpp  CoastlineAnalysis.cpp  LowerBoundVergleich.cpp  LowerBoundVergleichTriang.cpp  MultiThetaAnalysis.cpp  MultiThetaAnalysis.h  PathAnalysis.cpp  ThetaSpannerAnalyser.cpp  VisGraphAnalysis.cpp  analysis_with_distance_file.cpp  compareAlgoModifiedThetaGraph.cpp
code/src/ch_idea/: CH_idea.cpp
code/src/daniel/: Geometry.cpp  Geometry.h  Lowerbound_Graph.cpp  Lowerbound_Graph.h  Structs.h  Timer.h  Triangulation.cpp  Triangulation.h
code/src/io/: DataWriter.cpp  DataWriter.h  Dataloader.cpp  Dataloader.hpp  cdt6.cpp  mapToCoastlines.cc
code/src/spanner/: MixWspdThetaSpannerGenerator.cpp  ThetaSpanner.cpp  ThetaSpanner.hpp  createVisGraph.cpp
code/src/structure/: Graph.cpp  Graph.hpp  Quadtree.cpp  Quadtree.hpp
code/test/: GraphTest.cpp  QuadtreeTest.cpp  WSPDTest.cpp  sizeTest.cpp  thetaSpannerTest.cpp
python/src/: fmi_loader.py  main.py
